--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,14 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp">
+        android:layout_marginTop="120dp">
+
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:src="@drawable/logo" />
+
+
 
 
 
@@ -30,7 +37,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="70dp">
+            android:layout_marginBottom="120dp">
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -39,15 +46,19 @@
                 <ImageView
                     android:id="@+id/logingoogle"
                     android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_height="50dp"
+                    android:src="@drawable/googlelogo"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="35dp"
+                    android:layout_toRightOf="@id/logingoogle"
                     android:text="Sign in with google"
                     android:textSize="30dp"
-                    android:layout_toRightOf="@id/logingoogle"
-                    android:layout_marginLeft="35dp"
-                    android:layout_centerVertical="true"/>
+                    android:textStyle="italic"
+                    />
             </RelativeLayout>
 
 
