--- a/app/src/main/res/drawable/activity_gradient_background.xml
+++ b/app/src/main/res/drawable/activity_gradient_background.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="#CCF2FF"
-        android:endColor="#00BFFF"
+        android:startColor="#FFFF"
+        android:endColor="#00C6CF"
         android:angle="270"/>
 </shape>
