--- a/app/src/main/res/layout/splash_page.xml
+++ b/app/src/main/res/layout/splash_page.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/activity_gradient_background"
-        tools:context=".Splash_page"
-    >
+    tools:context=".Splash_page">
     <RelativeLayout
         android:layout_width="200dp"
         android:layout_height="200dp"
@@ -18,8 +17,6 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:src="@drawable/logo" />
-
-
 
 
 
